feat: Enhance Lambda compatibility by updating WSDL loading, S3 content type handling, and error propagation, alongside refactoring S3 configuration and local storage management.